--- a/environment.yml
+++ b/environment.yml
@@ -124,6 +124,7 @@ dependencies:
   - pyzmq=23.1.0=py310hede2015_0
   - readline=8.1.2=h46ed386_0
   - requests=2.28.0=pyhd8ed1ab_0
+  - scipy=1.8.1=py310hdb41229_0
   - send2trash=1.8.0=pyhd8ed1ab_0
   - setuptools=62.3.4=py310hbe9552e_0
   - six=1.16.0=pyh6c4a22f_0
